problem section is done

--- a/index.html
+++ b/index.html
@@ -62,6 +62,41 @@
     </header>
 
     <main>
+         <!-- ---------problem section start----- -->
+        <section id="problem">
+            <div class="problem-container   container">
+                <div class="problem-heading">
+                    <h2 class="section-heading">Notes Don't Fail, Structure Does.</h2>
+                    <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                </div>
+                <!-- !-------problem card box start----- -->
+
+                <div class="card-box">
+                    <div class="card">
+                        <img class="icon" src="./assets/Vector.png" alt="Vector">
+                        <h4>Scattered Notes</h4>
+                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                    <div class="card">
+                        <img class="icon" src="./assets/Bookmarks.png" alt="Bookmark">
+                        <h4>Bookmark Overload</h4>
+                        <p>Hundreds of saved links you'll never revisit or remember.</p>
+                    </div>
+                    <div class="card">
+                        <img class="icon" src="./assets/Brain.png" alt="Brain">
+                        <h4>No Idea Connections</h4>
+                        <p>Insights stay isolated, never building into bigger understanding.</p>
+                    </div>
+                    <div class="card">
+                        <img class="icon" src="./assets/Info.png" alt="Info">
+                        <h4>Forgetting What You Learned</h4>
+                        <p>Knowledge fades because there's no system to retain it.</p>
+                    </div>
+                </div>
+                <!-- !-------problem card box end----- -->
+            </div>
+        </section>
+        <!-- ---------problem section end------- -->
 
     </main>
 
