--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
             </div>
         </section>
         <!-- ---------problem section end------- -->
+          <!-- --------solution section start------ -->
+        <section id="solution">
+            <div class="solution-box   container">
+                <div class="solution-img">
+                    <img src="./assets/knowledge.png" alt="Knowledge image">
+                </div>
+                <div class="solution-content">
+                    <p class="solution-text">The Solution</p>
+                    <h2>Your Second Brain,<br>
+                        Structured By Design.</h2>
+                    <p class="solution-info">Personal Knowledge Vault isn't another note-taking app. z
+                        <br>
+                        It's a thinking environment where every note, link, and summary <br>
+                        becomes part of an interconnected web of understanding.
+                    </p>
+                    <ul class="solution-list">
+                        <li class="list"><img src="./assets/CheckCircle.png" alt="CheckCircle image">Capture ideas with
+                            structure
+                            built-in from day
+                            one</li>
+                        <li class="list"><img src="./assets/CheckCircle.png" alt="CheckCircle image">Connect related concepts
+                            automatically as you
+                            write</li>
+                        <li class="list"><img src="./assets/CheckCircle.png" alt="CheckCircle image">Build lasting knowledge
+                            through
+                            reflection
+                            prompts</li>
+                        <li class="list"><img src="./assets/CheckCircle.png" alt="CheckCircle image">Find anything instantly
+                            with
+                            semantic search</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- --------solution section end--------- -->
+
 
     </main>
 
