my call section is done

--- a/index.html
+++ b/index.html
@@ -133,8 +133,24 @@
         </section>
         <!-- --------solution section end--------- -->
 
+          <!-- -----------call to action section  start------ -->
+        <section id="call-section">
+            <div class="call-container  container">
+                <h2 class="section-heading">Ready To Think More Clearly?</h2>
+                <p class="cta-text">Join thousands of learners who are building their personal knowledge vaults. <br>
+                    Start free, no credit card required.</p>
+                <div class="cta-btn">
+                    <button>Get Early Access <img src=" ./assets/ArrowRight.png" alt="ArrowRight"></button>
+                </div>
+                <p class="cta-info">Free during early access • No credit card needed</p>
+            </div>
+        </section>
+        <!-- -----------call to action section  end------ -->
 
     </main>
+    <!-- ------main area end--------- -->
+
+
 
     <footer>
 
