footer section is done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first assignment</title>
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="icon" href=".//assets/portfolio.png">
      <!-- font-family  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -149,14 +150,24 @@
 
     </main>
     <!-- ------main area end--------- -->
-
-
-
+     <!-- -----footer area start------ -->
     <footer>
-
+        <section class="footer-container    container">
+            <div class="social">
+                <div class="logo">
+                    <img src="./assets/logo-footer.png" alt="knowledge Vault logo">
+                </div>
+                <div class="link">
+                    <p>Social Links</p>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+            <p class="copyright">© 2026 Personal Knowledge Vault. All rights reserved.</p>
+        </section>
     </footer>
+    <!-- --------------footer area end--------------- -->
 
-
-    
 </body>
 </html>
