all change comeplete done

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- font awesome is end  -->
+    <!--! font awesome is end  -->
 
 </head>
 <body  class="font-family">
     <header>
-         <!-- nav section is start  -->
+         <!--  !nav section is start  -->
         <nav id="nav-section">
             <div class="nav-image">
                 <img src="./assets/logo-navbar.png" alt="nav-logo">
@@ -37,9 +37,9 @@
                 <a href=""><button>Get Early Access</button></a>
             </div>
         </nav>
-        <!-- nav section is end  -->
+        <!-- ! nav section is end  -->
             
-        <!-- hero section start -->
+        <!-- !hero section start -->
         <section id="hero-section">
             <div class="hero-container">
                 <div class="hero-content">
@@ -63,7 +63,7 @@
     </header>
 
     <main>
-         <!-- ---------problem section start----- -->
+         <!-- !---------problem section start----- -->
         <section id="problem">
             <div class="problem-container   container">
                 <div class="problem-heading">
@@ -97,8 +97,8 @@
                 <!-- !-------problem card box end----- -->
             </div>
         </section>
-        <!-- ---------problem section end------- -->
-          <!-- --------solution section start------ -->
+        <!-- !---------problem section end------- -->
+          <!-- !--------solution section start------ -->
         <section id="solution">
             <div class="solution-box   container">
                 <div class="solution-img">
@@ -132,9 +132,8 @@
                 </div>
             </div>
         </section>
-        <!-- --------solution section end--------- -->
-
-          <!-- -----------call to action section  start------ -->
+           <!-- !solution end  -->
+            <!-- ? call to action section is start  -->
         <section id="call-section">
             <div class="call-container  container">
                 <h2 class="section-heading">Ready To Think More Clearly?</h2>
@@ -146,11 +145,11 @@
                 <p class="cta-info">Free during early access • No credit card needed</p>
             </div>
         </section>
-        <!-- -----------call to action section  end------ -->
+        <!-- !-----------call to action section  end------ -->
 
     </main>
     <!-- ------main area end--------- -->
-     <!-- -----footer area start------ -->
+     <!-- ,,,  -----footer area start------ -->
     <footer>
         <section class="footer-container    container">
             <div class="social">
@@ -167,7 +166,7 @@
             <p class="copyright">© 2026 Personal Knowledge Vault. All rights reserved.</p>
         </section>
     </footer>
-    <!-- --------------footer area end--------------- -->
+    <!--? ---------footer section end--------------- -->
 
 </body>
 </html>
